:sparkles: Relacionamento Api, Ajuste Front

--- a/Front-End/src/app/components/login/login.component.html
+++ b/Front-End/src/app/components/login/login.component.html
@@ -1,16 +1,20 @@
 
 <div class="card">
-    <p-floatLabel >
-        <label for="username">Username</label>
-        <input id="username" type="text"/>
-    </p-floatLabel>
-    <div style="height: 15px;">
-
+    <div class="form-container">
+        <img src="assets/logo_pacto_solucoes.png" alt="">
+        <br>
+        <p-floatLabel >
+            <label for="username">Username</label>
+            <input id="username" type="text"/>
+        </p-floatLabel>
+        <div style="height: 15px;">
+    
+        </div>
+        <p-floatLabel >
+            <label for="password">Password</label>
+            <input id="password" type="password"/>
+        </p-floatLabel>
     </div>
-    <p-floatLabel >
-        <label for="password">Password</label>
-        <input id="password" type="password"/>
-    </p-floatLabel>
 </div>
 
 
