--- a/Front-End/src/app/app.component.html
+++ b/Front-End/src/app/app.component.html
@@ -1,1 +1,13 @@
-<router-outlet />
+<!--   
+  <img src="assets/icons/logo2.png" alt="Minha imagem" style="margin-top:-145px;margin-left: -95px; margin-bottom: -170px;">
+</div>
+
+<div class="p-card p-d-flex p-jc-end">
+  <div class="p-panelMenu-wrapper">
+    <app-menu></app-menu>
+  </div> -->
+
+    <router-outlet></router-outlet>
+
+
+
