--- a/Front-End/src/app/components/login/login.component.html
+++ b/Front-End/src/app/components/login/login.component.html
@@ -2,20 +2,17 @@
     <div class="form-container">
         <img src="assets/logo_pacto_solucoes.png" width="80%" height="150px" alt="">
         <span class="p-float-label">
-            <input pInputText id="username" [value]="username"/>
+            <input pInputText id="username" [(ngModel)]="username"/>
             <label htmlFor="username">Usuário</label>
         </span>
-        <div style="height: 30px;">
-        </div>
         <span class="p-float-label">
-            <input type="password" pInputText id="username" [value]="password"/>
+            <input type="password" pInputText id="password" [(ngModel)]="password"/>
             <label htmlFor="password">Senha</label>
         </span>
-        <br>
         <p-button label="ENTRAR" [loading]="loading" (click)="logar()" styleClass="p-button-sm button"></p-button>
         <br>
-        <p-button label="CADASTRAR" styleClass="p-button-outlined p-button-sm button"></p-button>
+        <p-button label="CADASTRAR" (click)="direcionarTelaCadastro()"styleClass="p-button-outlined p-button-sm button"></p-button>
     </div>
 </div>
 
-<p-messages *ngIf="messages.length > 0" [(value)]="messages" [closable]="true"></p-messages>
+<p-toast position="top-center"></p-toast>
