--- a/Front-End/src/app/app.component.html
+++ b/Front-End/src/app/app.component.html
@@ -7,4 +7,37 @@
     <!-- <strong styleClass="mr-2">{{usernameAndToken?.username}}</strong> -->
   </ng-template>
 </p-menubar>
+<div class="card">
+  <button class="btn-cadastrar" pButton pRipple icon="pi pi-plus" label="Cadastrar Vaga"></button>
+  <p-table
+      [value]="vagas"
+      [paginator]="true"
+      [rows]="5"
+      [showCurrentPageReport]="true"
+      [tableStyle]="{ 'min-width': '50rem' }"
+      currentPageReportTemplate="Showing {first} to {last} of {totalRecords} entries"
+      [rowsPerPageOptions]="[10, 25, 50]"
+  >
+      <ng-template pTemplate="header">
+          <tr>
+              <th style="width:10%">Titulo</th>
+              <th style="width:75%">Descrição</th>
+              <th style="width:10%">Candidatos</th>
+              <th style="width:5%">Ações</th>
+          </tr>
+      </ng-template>
+      <ng-template pTemplate="body" let-vaga>
+          <tr>
+              <td>{{ vaga.tituloVaga }}</td>
+              <td>{{ vaga.descricaoVaga }}</td>
+              <td style="text-align: center;">{{ vaga.cadidatos.length }}</td>
+              <td>
+                <button *ngIf="admin" type="button" pButton pRipple icon="pi pi-user-plus" class="p-button-rounded p-button-text"></button>      
+              </td>
+          </tr>
+      </ng-template>
+  </p-table>
+</div>
+
+
 <router-outlet></router-outlet>
