:sparles: Cadastrando Vaga Front

--- a/Front-End/src/app/app.component.css
+++ b/Front-End/src/app/app.component.css
@@ -2,12 +2,12 @@
     width: 50%;
     height: 50%
 }  
-  .btn-cadastrar {
+.btn-cadastrar {
     margin-bottom: 20px;
     margin-top: 20px;
-  }
+}
   
   .card {
-    margin-top: 60px; /* Ajuste para garantir que a tabela não fique sobre o botão */
+    margin-top: 60px; 
     margin: 10px;
   }
